--- a/styles.css
+++ b/styles.css
@@ -5,13 +5,12 @@
   left: 0px;
   right: 0px;
   width: 100%;
-  height: 500px;
+  height: 700px;
 
 }
-
 header {
 	width:1270px;
-	height:500px;
+	height:600px;
 	text-align: center;
 
 }
@@ -20,12 +19,12 @@ header {
 }
 
 h1 {
-	text-align: center;
+	text-align: right;
+	padding-right: 200px;
 	padding-top: 100px;
 	font-family: 'Raleway', sans-serif;
 	color: white;
 	font-size: 34pt;
-
 }
 
 h3 {
@@ -39,10 +38,22 @@ padding-top: 490px;
 p{
   font-family: 'Raleway', sans-serif;
   font-size:14pt;
-margin-top: 40px;
+margin-top: 15px;
   margin-bottom: 40px;
   margin-right: 170px;
   margin-left: 170px;
+}
+p.byline{
+	font-family: 'Raleway', sans-serif;
+	color: white;
+	padding-right: 70px;
+	text-align: right;
+	padding-top: -100px;
+
+
+}
+p.head{
+	margin-top: 240px;
 }
 p.space{
 	margin-top: -20px;
@@ -61,4 +72,57 @@ blockquote {
   margin-left: 200px;
   margin-bottom: 40px;
 
+}
+hr{
+
+	border-style: inset;
+	color: black;
+	border-width: 0.5px;
+}
+
+.footer {
+box-sizing: border-box; /* will need vendor prefixes for webkit and mozilla */
+font-size: 8px;
+font-family: 'Raleway', sans-serif;
+color: grey;
+padding-left: 189px;
+margin-top: -10px;
+}
+.footer-item {
+    width: 15%;
+    float: left;
+		padding-left:15px;
+		padding-right: 10px;
+}
+
+.footer-item + .footer-item {
+    border-left: 0.5px solid grey;
+}
+p.bottom-space{
+	padding-bottom: 50px;
+}
+#slideshow {
+margin-left: 180px;
+  position: relative;
+  width: 750px;
+  height: 500px;
+  padding-left: 10px;
+	padding-right: 10px;
+}
+
+#slideshow > div {
+  position: absolute;
+  left: 10px;
+  right: 10px;
+  bottom: 10px;
+}
+/* Caption text */
+.text {
+  color: #f2f2f2;
+  font-size: 17px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 10px;
+  width: 100%;
+  text-align: center;
 }
